--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.interpreter.path": "./searchai_env/bin/python",
-    "python.terminal.activateEnvironment": true
+    "python.defaultInterpreterPath": "./searchai_env/bin/python",
+    "python.terminal.activateEnvironment": true,
+    "python.terminal.executeInFileDir": true
 }
